# project-index

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
.project-index/: index.db
examples/: claude_code_setup.md  cursor_setup.md
src/project_index/: cli.py  config.py  manager.py  server.py
src/project_index/api/: routes.py  schemas.py
src/project_index/indexer/: core.py  ignore.py  incremental.py  parser.py  resolver.py
src/project_index/languages/: base.py  go_lang.py  javascript_lang.py  python_lang.py  registry.py  typescript_lang.py
src/project_index/mcp/: __init__.py  server.py
src/project_index/query/: context.py  graph.py  search.py  tokens.py
src/project_index/store/: cache.py  database.py  models.py
src/project_index/store/migrations/: 001_initial.sql
src/project_index/utils/: hashing.py  logging.py
src/project_index/watcher/: handler.py
