[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-index"
version = "0.1.5"
description = "Local code indexing service that reduces AI tool token usage"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tree-sitter>=0.24.0",
    "pathspec>=0.12.0",
    "watchdog>=4.0.0",
    "httpx>=0.27.0",
]
license = { file = "LICENSE" }

[project.optional-dependencies]
languages = [
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
]
all = [
    "project-index[languages]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
project-index = "project_index.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/project_index"]

[tool.ruff]
line-length = 100
